--- a/world/xorg-server/PKGBUILD
+++ b/world/xorg-server/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=xorg-server
 pkgname=('xorg-server' 'xorg-server-xephyr' 'xorg-server-xvfb' 'xorg-server-xnest'
          'xorg-server-common' 'xorg-server-devel')
 pkgver=21.1.18
-pkgrel=1
+pkgrel=2
 arch=('x86_64')
 license=('LicenseRef-Adobe-Display-PostScript'
          'BSD-3-Clause' 
@@ -67,6 +67,7 @@ build() {
     -D dtrace=false \
     -D systemd_logind=true \
     -D suid_wrapper=true \
+    -D linux_acpi=false \
     -D xkb_dir=/usr/share/X11/xkb \
     -D xkb_output_dir=/var/lib/xkb \
     -D libunwind=true
