--- a/galaxy/waterfox/PKGBUILD
+++ b/galaxy/waterfox/PKGBUILD
@@ -1,7 +1,6 @@
 # Maintainer: artist for Artix Linux
 
 pkgname=waterfox
-_pkgname=Waterfox
 pkgver=6.5.10
 pkgrel=1
 pkgdesc='Fork of Mozilla Firefox featuring some privacy, usability, and speed enhancements.'
@@ -75,7 +74,7 @@ options=(!emptydirs !makeflags !strip !lto !debug)
 
 prepare() {
         mkdir -p mozbuild
-        cd "$_pkgname-$pkgver"
+        cd "$pkgname-$pkgver"
 
 	bsdtar xvf ../l10n.zip --strip-components=1 -C waterfox/browser/locales
         patch -Np1 -i ../remove-organization-policy-banner.patch
@@ -141,7 +140,7 @@ END
 }
 
 build() {
-	cd "$_pkgname-$pkgver"
+	cd "$pkgname-$pkgver"
 
 	export MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=pip
 	export MOZBUILD_STATE_PATH="$srcdir/mozbuild"
@@ -211,7 +210,7 @@ END
 }
 
 package() {
-	cd "$_pkgname-$pkgver" || exit
+	cd "$pkgname-$pkgver" || exit
 
 	install -Ddvm755 "${pkgdir}/usr/lib/${pkgname}"
 	cp -rvf "obj-Linux-x86_64/dist/${pkgname}/." "${pkgdir}/usr/lib/${pkgname}"
@@ -285,7 +284,7 @@ EOT
         fi
 }
 
-b2sums=('092c576bee39d83f9409217a66822324df729b746e69236379516df3395d1838e30345e3eb7d0dacd7afafbc78dfc590d51aae8c53a55c7955682567bfc0f76f'
+b2sums=('296b832420546ea776eb204cd6ded009fd32e959c9f78116e752b4245b58c9a8884a09ec1e80609cf33eb9e22399014648a34eb3fe58df80dc6f07bc125c1fa6'
         'dae98ce62bcc76d822d16a9c140a65943cd1d383734684b08e765b12e61e7010c104a0b333888a6f911fc22c2521c9148a8634cf36d7f120f964bb2ddcde162b'
         '0fad7604486275fb74cdc11ce4375f024eda859eb6520f71cb6c4e73a042e9d16d3e6d03d3bc6e3d6bf6ec72d7c07394c922914042be3d0919205a55cf7ab978'
         '164844bacff82d9c6431c55ab078725e8e23ff0dc67bf079d56a5696f70b54ca81ec27e5a37acb336b52048c956cd39db087ac060414a1863d8ef3c47120df67'
