--- a/world/gdal/.artixlinux/srcinfo.yaml
+++ b/world/gdal/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 3.11.0-2
+version: 3.11.0-3
 pkgbase:
   name: gdal
   pkgdesc: A translator library for raster and vector geospatial data formats
   pkgver: 3.11.0
-  pkgrel: 2
+  pkgrel: 3
   url: https://gdal.org/
   changelog: gdal.changelog
   arch:
@@ -58,6 +58,7 @@ pkgbase:
     - zlib
     - zstd
     - libaec
+    - muparser
   source:
     - https://download.osgeo.org/gdal/3.11.0/gdal-3.11.0.tar.xz
   b2sums:
@@ -93,6 +94,8 @@ pkgname:
       - zlib
       - zstd
       - libaec
+      - muparser
+      - libarchive
     optdepends:
       - 'arrow: Arrow/Parquet support'
       - 'cfitsio: FITS support'
@@ -112,4 +115,4 @@ pkgname:
     depends:
       - gdal=3.11.0
       - python-numpy
-# generated with artixpkg 0.36.3-2-any
+# generated with artixpkg 0.36.4-1-any
