Updated nodejs-lts-jod - 22.17.0-1

--- a/world/nodejs-lts-jod/PKGBUILD
+++ b/world/nodejs-lts-jod/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=nodejs-lts-jod
-pkgver=22.16.0
+pkgver=22.17.0
 pkgrel=1
 pkgdesc='Evented I/O for V8 javascript ("Active LTS" release: Jod)'
 arch=(x86_64)
@@ -19,9 +19,9 @@ provides=(
   nodejs-lts
 )
 conflicts=(nodejs)
-source=(https://nodejs.org/dist/v${pkgver}/node-v${pkgver}.tar.xz)
+source=("https://nodejs.org/dist/v${pkgver}/node-v${pkgver}.tar.xz")
 # https://nodejs.org/download/release/latest-jod/SHASUMS256.txt.asc
-sha256sums=('720894f323e5c1ac24968eb2676660c90730d715cb7f090be71a668662a17c37')
+sha256sums=('7a3ef2aedb905ea7926e5209157266e2376a5db619d9ac0cba3c967f6f5db4f9')
 
 build() {
   cd node-v${pkgver}
