--- a/world/waybar/PKGBUILD
+++ b/world/waybar/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Parmjot Singh <parmjotsinghrobot at gmail dot com>
 
 pkgname=waybar
-pkgver=0.12.0
+pkgver=0.13.0
 pkgrel=1
 pkgdesc='Highly customizable Wayland bar for Sway and Wlroots based compositors'
 arch=('x86_64')
@@ -18,6 +18,7 @@ depends=(
     'glib2'
     'glibc'
     'glibmm'
+    'gpsd'
     'gtk-layer-shell'
     'gtk3'
     'gtkmm3'
@@ -58,7 +59,7 @@ optdepends=(
 source=(
     "$pkgname-$pkgver.tar.gz::https://github.com/Alexays/Waybar/archive/$pkgver.tar.gz"
 )
-b2sums=('861eacae9ab9571dc09259055b48ff739915de92745de04af4d621de029feb9e5b225ae7f590ea95883c993b12a7be45b164a90d823a322fe4d533a33b3fe689')
+b2sums=('5e234046d4dc276c59a8cda57363c43967e21abc618f046dfde8c1952ca5001b2e1575cfaf19bef032d212a7f9fc681e854d758b4a2ca496e4b6f2108d92493c')
 
 build() {
     cd "Waybar-$pkgver"
@@ -66,7 +67,7 @@ build() {
           --buildtype=plain \
           --auto-features=enabled \
           --wrap-mode=nodownload \
-          -Dsystemd=disabled \
+	  -Dsystemd=disabled \
           -Dcpp_std=c++20 \
           -Dexperimental=true \
           -Dcava=disabled \
