--- a/system/thin-provisioning-tools/.artixlinux/pkgbase.yaml
+++ b/system/thin-provisioning-tools/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: thin-provisioning-tools
-  version: 1.1.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - thin-provisioning-tools
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 1.1.0-1
+    version: 1.2.0-1
     packages:
-      - thin-provisioning-tools-1.1.0-1-x86_64.pkg.tar.zst
+      - thin-provisioning-tools-1.2.0-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
