--- a/world/uv/.artixlinux/pkgbase.yaml
+++ b/world/uv/.artixlinux/pkgbase.yaml
@@ -30,10 +30,11 @@ repos:
     packages: []
     debug: []
   world:
-    version: 0.7.15-2
+    version: 0.7.15-3
     packages:
-      - uv-0.7.15-2-x86_64.pkg.tar.zst
-      - python-uv-0.7.15-2-x86_64.pkg.tar.zst
+      - uv-0.7.15-3-x86_64.pkg.tar.zst
+      - python-uv-0.7.15-3-x86_64.pkg.tar.zst
+      - python-uv-build-0.7.15-3-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
