--- a/world/uv/.artixlinux/srcinfo.yaml
+++ b/world/uv/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 0.7.15-2
+version: 0.7.15-3
 pkgbase:
   name: uv
   pkgdesc: An extremely fast Python package installer and resolver written in Rust
   pkgver: 0.7.15
-  pkgrel: 2
+  pkgrel: 3
   url: https://github.com/astral-sh/uv
   arch:
     - x86_64
@@ -38,7 +38,6 @@ pkgname:
   - name: python-uv
     depends:
       - python
-      - uv
-    provides:
-      - python-uv-build=0.7.15
+      - uv=0.7.15
+  - name: python-uv-build
 # generated with artixpkg 0.36.4-1-any
