--- a/world/udisks2/.artixlinux/pkgbase.yaml
+++ b/world/udisks2/.artixlinux/pkgbase.yaml
@@ -1,61 +1,63 @@
 ---
-pkgbase:
-  name: udisks2
-  version: 2.10.1-5
-  arch:
-    - x86_64
-  pkgname:
-    - udisks2
-    - udisks2-btrfs
-    - udisks2-lvm2
-    - udisks2-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 2.10.1-5
+    version: 2.10.1-6
     packages:
-      - udisks2-2.10.1-5-x86_64.pkg.tar.zst
-      - udisks2-btrfs-2.10.1-5-x86_64.pkg.tar.zst
-      - udisks2-lvm2-2.10.1-5-x86_64.pkg.tar.zst
-      - udisks2-docs-2.10.1-5-x86_64.pkg.tar.zst
+      - udisks2-2.10.1-6-x86_64.pkg.tar.zst
+      - udisks2-btrfs-2.10.1-6-x86_64.pkg.tar.zst
+      - udisks2-lvm2-2.10.1-6-x86_64.pkg.tar.zst
+      - udisks2-docs-2.10.1-6-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
