--- a/world/opencascade/.artixlinux/pkgbase.yaml
+++ b/world/opencascade/.artixlinux/pkgbase.yaml
@@ -1,13 +1,6 @@
 ---
-pkgbase:
-  name: opencascade
-  version: 1:7.8.1-3
-  arch:
-    - x86_64
-  pkgname:
-    - opencascade
 actions:
-  addRepo: world
+  addRepo: world-goblins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -18,38 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
-    version: null
-    packages: []
+    version: 1:7.8.1-3
+    packages:
+      - opencascade-1:7.8.1-3-x86_64.pkg.tar.zst
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: 1:7.8.1-3
     packages:
       - opencascade-1:7.8.1-3-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
