--- a/world/crun/PKGBUILD
+++ b/world/crun/PKGBUILD
@@ -3,18 +3,18 @@
 # Contributor: hexchian <i at hexchain dot org>
 
 pkgname=crun
-pkgver=1.21
+pkgver=1.22
 pkgrel=1
 pkgdesc="A fast and lightweight fully featured OCI runtime and C library for running containers"
 url="https://github.com/containers/crun"
-license=('LGPL')
+license=('LGPL-2.1-or-later')
 arch=('x86_64')
 provides=('oci-runtime')
 depends=('yajl' 'libudev' 'libcap' 'libseccomp' 'criu')
 makedepends=('libtool' 'python' 'go-md2man' 'udev' 'git')
 source=("git+https://github.com/containers/crun.git#tag=$pkgver?signed")
 validpgpkeys=('AC404C1C0BF735C63FF4D562263D6DF2E163E1EA')
-sha256sums=('c807b5ae99273adff712a2d894896d3cbae9f7ecc985763725c3b0e06d01257b')
+sha256sums=('c70b5f495fcce72e717044298c55a3b396888cf0c7260c3fbc7e607a6bf72019')
 
 build() {
     cd "$pkgname"
