--- a/world/libssh/.artixlinux/pkgbase.yaml
+++ b/world/libssh/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
-pkgbase:
-  name: libssh
-  version: 0.11.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - libssh
-    - libssh-docs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.11.1-1
+    version: 0.11.2-1
     packages:
-      - libssh-0.11.1-1-x86_64.pkg.tar.zst
-      - libssh-docs-0.11.1-1-x86_64.pkg.tar.zst
+      - libssh-0.11.2-1-x86_64.pkg.tar.zst
+      - libssh-docs-0.11.2-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
