--- a/world/llvm19/.artixlinux/pkgbase.yaml
+++ b/world/llvm19/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: world
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -30,10 +30,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 19.1.7-1.1
+    version: 19.1.7-2
     packages:
-      - llvm19-19.1.7-1.1-x86_64.pkg.tar.zst
-      - llvm19-libs-19.1.7-1.1-x86_64.pkg.tar.zst
+      - llvm19-19.1.7-2-x86_64.pkg.tar.zst
+      - llvm19-libs-19.1.7-2-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
