--- a/world/perl-specio/.artixlinux/srcinfo.yaml
+++ b/world/perl-specio/.artixlinux/srcinfo.yaml
@@ -1,10 +1,10 @@
 ---
-version: 0.51-1
+version: 0.51-2
 pkgbase:
   name: perl-specio
   pkgdesc: Type constraints and coercions for Perl
   pkgver: 0.51
-  pkgrel: 1
+  pkgrel: 2
   url: https://search.cpan.org/dist/Specio
   arch:
     - any
@@ -18,6 +18,7 @@ pkgbase:
     - perl-devel-stacktrace
     - perl-clone
     - perl-eval-closure
+    - perl-clone-choose
   options:
     - '!emptydirs'
   source:
