--- a/world/perl-specio/PKGBUILD
+++ b/world/perl-specio/PKGBUILD
@@ -2,13 +2,13 @@
 
 pkgname=perl-specio
 pkgver=0.51
-pkgrel=1
+pkgrel=2
 pkgdesc="Type constraints and coercions for Perl"
 arch=('any')
 url="https://search.cpan.org/dist/Specio"
 license=('GPL' 'PerlArtistic')
 depends=('perl-role-tiny' 'perl-test-fatal' 'perl-mro-compat' 'perl-devel-stacktrace'
-	 'perl-clone' 'perl-eval-closure')
+	 'perl-clone' 'perl-eval-closure' 'perl-clone-choose')
 options=('!emptydirs')
 source=(https://search.cpan.org/CPAN/authors/id/D/DR/DROLSKY/Specio-$pkgver.tar.gz)
 sha256sums=('505f5de28bee55545b9ec0c45c1d5e4ae568d4f5dbb5e8eabe9d980cb9b68f93')
