--- a/world/libvoikko/.artixlinux/pkgbase.yaml
+++ b/world/libvoikko/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
-pkgbase:
-  name: libvoikko
-  version: 4.3.2-4
-  arch:
-    - x86_64
-  pkgname:
-    - libvoikko
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.3.2-4
+    version: 4.3.3-1
     packages:
-      - libvoikko-4.3.2-4-x86_64.pkg.tar.zst
+      - libvoikko-4.3.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
