--- a/world/maturin/.artixlinux/pkgbase.yaml
+++ b/world/maturin/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,10 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 1.8.7-2
+    version: 1.9.0-1
     packages:
-      - maturin-1.8.7-2-x86_64.pkg.tar.zst
-      - python-maturin-1.8.7-2-x86_64.pkg.tar.zst
+      - maturin-1.9.0-1-x86_64.pkg.tar.zst
+      - python-maturin-1.9.0-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
