--- a/world/mobile-broadband-provider-info/.artixlinux/pkgbase.yaml
+++ b/world/mobile-broadband-provider-info/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: mobile-broadband-provider-info
-  version: 20240407-1
-  arch:
-    - any
-  pkgname:
-    - mobile-broadband-provider-info
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 20240407-1
+    version: 20250613-1
     packages:
-      - mobile-broadband-provider-info-20240407-1-any.pkg.tar.zst
+      - mobile-broadband-provider-info-20250613-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
